--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,21 @@
 
-/* 
+.Traffic-Light{
+    background-color: black;
+    padding: 10PX;
+    display: inline-block;
+    margin: auto;
+}
 
-    You can write your own styles here...
+.light{
     
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
 
-*/
+}
+.red{background-color: red;}
+.yellow{background-color: yellow;}
+.green{background-color: green;}
+.glow{
+    box-shadow: 0 0 9px 4px #747DE8
+}
